libycp/testsuite/tests/expressions/namespace_scanner.err
[Parser] tests/expressions/namespace_scanner.ycp:6 Unexpected char '4'
[Parser] tests/expressions/namespace_scanner.ycp:6 syntax error, unexpected SCANNER_ERROR
runycp: parser error
