libycp/testsuite/tests/expressions/namespace_scanner.ycp
{
	import "NestedA";

	y2error ("%1", NestedA::42
a1);
}
